[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/target_indicator.png" type="Texture" id=1]
[ext_resource path="res://scenes/world/death_fog.gd" type="Script" id=2]
[ext_resource path="res://assets/images/ascii_tileset.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 14 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="death_fog" type="KinematicBody2D" groups=["death fog"]]
collision_layer = 64
collision_mask = 64
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 32
vframes = 16
frame = 128

[node name="target_indicator" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Raycast DOWN" type="RayCast2D" parent="."]
scale = Vector2( 3, 1 )
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 65

[node name="Raycast UP" type="RayCast2D" parent="."]
scale = Vector2( 3, 1 )
enabled = true
cast_to = Vector2( 0, -32 )
collision_mask = 65

[node name="Raycast RIGHT" type="RayCast2D" parent="."]
scale = Vector2( 1, 3 )
enabled = true
cast_to = Vector2( 32, 0 )
collision_mask = 65

[node name="Raycast LEFT" type="RayCast2D" parent="."]
scale = Vector2( 1, 3 )
enabled = true
cast_to = Vector2( -32, 0 )
collision_mask = 65

[node name="target_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="target_area"]
position = Vector2( -7.15256e-07, 0 )
scale = Vector2( 1.44235, 0.797661 )
shape = SubResource( 2 )

[node name="overhead_stats_position" type="Position2D" parent="."]
position = Vector2( -80, -72 )
z_index = 3

[node name="debug_label" type="Label" parent="."]
unique_name_in_owner = true
margin_left = -49.0
margin_top = 16.0
margin_right = 51.0
margin_bottom = 30.0
text = "debugging label"
align = 1

[node name="collision area" type="Area2D" parent="."]
collision_layer = 96
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision area"]
shape = SubResource( 1 )

[connection signal="body_entered" from="collision area" to="." method="_on_collision_area_body_entered"]
[connection signal="body_exited" from="collision area" to="." method="_on_collision_area_body_exited"]
